

===============
GNRS 0.3.1
===============
## NEW FEATURES

## BUG FIXES
* Fixed problem with handling of API being down/unavailable
* Tests are now skipped if offline

===============
GNRS 0.3.0
===============
## NEW FEATURES

* Added GNRS_metadata
* Added GNRS_acknowledgments
* Added GNRS_citations
* Added GNRS_sources

## BUG FIXES

* FUnctions return a message if they cannot connect to either the internet or the API.

===============
GNRS 0.2.0
===============

## NEW FEATURES

* The field "user_id" is now required to be either null or contain only unique values.
* The field "user_id" is now used to ensure the order of the returned records match the order that was submitted.
* The URL used by the API was updated
* Added the option to specify the number of batches to use for processing.
* Added GNRS_version function
* Added GNRS_get_countries()
* Added GNRS_get_states()
* Added GNRS_get_counties()
* Added testing via testthat
* Moved data to from inst/extdata to data/ and added documentation

===============
GNRS 0.1.0
===============

## NEW FEATURES

* released to CRAN