@@ -1,0 +1,20 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/gnrs_data_dictionary.R
+\name{GNRS_data_dictionary}
+\alias{GNRS_data_dictionary}
+\title{Get Data Dictionary}
+\usage{
+GNRS_data_dictionary()
+}
+\value{
+Dataframe containing GNRS Data Dictionary
+}
+\description{
+Return GNRS Data Dictionary
+}
+\examples{
+\dontrun{
+GNRS_dictionary <- GNRS_data_dictionary()
+}
+
+}
